added light chain cdrs to dataset class

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -81,19 +81,123 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "82b7f413",
+   "id": "e655cf45",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_loader = DataLoader(dataset, batch_size=2, collate_fn=dataset.collate_fn)\n",
-    "for batch in test_loader:\n",
-    "#     print(batch)\n",
-    "    break"
+    "item = dataset.data[0]\n",
+    "hc, lc = item.get_heavy_chain(), item.get_light_chain()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "27d4129a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'CDR-H1': (25, 32),\n",
+       " 'CDR-H2': (50, 56),\n",
+       " 'CDR-H3': (95, 106),\n",
+       " 'CDR-L1': (26, 37),\n",
+       " 'CDR-L2': (55, 57),\n",
+       " 'CDR-L3': (94, 101)}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "item.cdr_pos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "02b3b289",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((25, 32), (94, 101))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "item.get_cdr_pos(\"H1\"), item.get_cdr_pos(\"L3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "df00ee31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'QVQLKESGPGLVAPSQSLSITCTVSGFPLTAYGVNWVRQPPGKGLEWLGMIWGDGNTDYNSALKSRLSISKDNSKSQVFLKMNSLQTDDTARYYCARDPYGSKPMDYWGQGTSVTVSS'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hc.get_seq()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b3b34e42",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'DIVMSQSPSSLVVSVGEKVTMSCKSSQSLLYSSNQKNFLAWYQQKPGQSPKLLIYWASTRESGVPDRFTGSGSGTDFTLTISSVKAEDLAVYYCQQYFRYRTFGGGTKLEIKRA'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lc.get_seq()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "82b7f413",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_loader = DataLoader(dataset, batch_size=1, collate_fn=dataset.collate_fn)\n",
+    "cnt = 0\n",
+    "for batch in test_loader:\n",
+    "#     print(batch)\n",
+    "    cnt += 1\n",
+    "    \n",
+    "    if cnt==1:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "70eab25e",
    "metadata": {
     "scrolled": true
@@ -132,43 +236,10 @@
        "         [[  26.3030,  -89.0430,  -26.7520],\n",
        "          [  26.5050,  -90.1070,  -27.7370],\n",
        "          [  25.3910,  -90.1940,  -28.8030],\n",
-       "          [  24.7330,  -91.2290,  -28.9400]]],\n",
-       "\n",
-       "\n",
-       "        [[[   0.0000,    0.0000,    0.0000],\n",
-       "          [   0.0000,    0.0000,    0.0000],\n",
-       "          [   0.0000,    0.0000,    0.0000],\n",
-       "          [   0.0000,    0.0000,    0.0000]],\n",
-       "\n",
-       "         [[   9.6630,  -11.1660,   49.1370],\n",
-       "          [   9.9640,   -9.9550,   48.3160],\n",
-       "          [  11.4630,   -9.9060,   48.0250],\n",
-       "          [  11.8870,  -10.3600,   46.9600]],\n",
-       "\n",
-       "         [[  12.2620,   -9.3850,   48.9500],\n",
-       "          [  13.7010,   -9.3860,   48.7500],\n",
-       "          [  14.4210,   -9.8690,   49.9960],\n",
-       "          [  14.4350,   -9.1790,   51.0200]],\n",
-       "\n",
-       "         ...,\n",
-       "\n",
-       "         [[   0.0000,    0.0000,    0.0000],\n",
-       "          [   0.0000,    0.0000,    0.0000],\n",
-       "          [   0.0000,    0.0000,    0.0000],\n",
-       "          [   0.0000,    0.0000,    0.0000]],\n",
-       "\n",
-       "         [[   0.0000,    0.0000,    0.0000],\n",
-       "          [   0.0000,    0.0000,    0.0000],\n",
-       "          [   0.0000,    0.0000,    0.0000],\n",
-       "          [   0.0000,    0.0000,    0.0000]],\n",
-       "\n",
-       "         [[   0.0000,    0.0000,    0.0000],\n",
-       "          [   0.0000,    0.0000,    0.0000],\n",
-       "          [   0.0000,    0.0000,    0.0000],\n",
-       "          [   0.0000,    0.0000,    0.0000]]]])"
+       "          [  24.7330,  -91.2290,  -28.9400]]]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "fb6fb641",
    "metadata": {
     "scrolled": true
@@ -203,26 +274,10 @@
        "         13, 11, 21, 13, 21, 23, 11,  6,  6,  6, 23, 18,  9, 17, 10, 18, 21,  7,\n",
        "          2, 22, 12, 19, 25, 19, 24,  9, 13, 11, 16, 21, 24, 16,  8,  6, 24, 10,\n",
        "         15, 16, 16, 18, 24, 10, 21, 18, 14, 11, 23, 25, 15, 14, 14, 13, 13, 25,\n",
-       "         25, 24, 25, 24, 23, 17, 17, 22, 15,  8, 24, 21, 14],\n",
-       "        [ 3, 18,  9, 19, 19, 22,  6,  7, 17,  9,  8, 21, 22,  6,  7, 22,  8, 18,\n",
-       "          9, 22, 24, 23,  7, 22,  6, 11, 16, 10, 18, 14, 13, 13, 10, 19, 12,  8,\n",
-       "         18, 19, 21, 25, 17, 19,  6,  9, 17, 12, 10,  6, 12, 10, 14, 25, 17, 16,\n",
-       "          6, 16, 22, 17, 13,  7, 25, 21, 11, 19,  6, 18,  7, 23, 20, 23,  7, 14,\n",
-       "         23,  9, 22, 16, 23,  7, 13,  9, 19,  9, 22, 22,  9, 23, 22, 17, 14, 23,\n",
-       "          7,  8, 13, 13, 24, 16,  7, 14,  9, 15, 14, 13, 12,  6, 19,  6, 23, 23,\n",
-       "          9, 23,  8, 22, 22,  7,  4, 14,  8,  8, 20, 23, 19, 23, 25,  9, 22,  9,\n",
-       "         22,  8, 23, 10,  6, 19, 25,  7, 22, 10, 22, 24, 18, 22, 22, 19, 22,  9,\n",
-       "          9, 14, 22, 14,  6, 18, 23, 13,  9, 10, 12,  8, 11, 19, 21, 25,  6, 19,\n",
-       "         22, 25, 18, 21,  9, 10, 11,  9,  8, 22, 18, 21, 14, 22,  6,  8, 25, 14,\n",
-       "         21, 11, 23,  6, 22,  6, 22,  6, 23, 14, 11, 23,  9, 18, 10, 22, 21,  8,\n",
-       "         17,  7, 17, 14,  8,  6,  8, 13, 13, 24, 12, 19,  6, 23, 15, 11, 25, 15,\n",
-       "         23,  8,  6,  6,  6, 23, 18,  9, 17, 10,  7, 21,  7,  2, 15, 25, 18, 23,\n",
-       "         16, 20, 18,  7, 20,  7,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0]])"
+       "         25, 24, 25, 24, 23, 17, 17, 22, 15,  8, 24, 21, 14]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,18 +288,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "146f3ee2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['0000000000000000000000000011111111000000000000000002222222000000000000000000000000000000000000003333333333330000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000',\n",
-       " '000000000000000000000000111111110000000000000000022222222000000000000000000000000000000000000003333333000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000']"
+       "['0000000000000000000000000011111111000000000000000002222222000000000000000000000000000000000000003333333333330000000000000000000000000000000000000044444444444400000000000000000555000000000000000000000000000000000000666666660000000000000000000000000000000000000000000000000000000000000']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,8 +309,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "545c9156",
+   "execution_count": 15,
+   "id": "083560a0",
    "metadata": {
     "scrolled": true
    },
@@ -275,22 +329,10 @@
        "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1,\n",
        "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
-       "        [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1,\n",
-       "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])"
+       "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,17 +343,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "1973c800",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(torch.Size([2, 283, 4, 3]), torch.Size([2, 283]), 2, torch.Size([2, 283]))"
+       "(torch.Size([1, 283, 4, 3]), torch.Size([1, 283]), 1, torch.Size([1, 283]))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,22 +364,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "000576d0",
+   "id": "df9405f5",
    "metadata": {},
    "source": [
-    "X - batch里有两个样本，有283个AA，每个AA的N/CA/C/O坐标为4x3的矩阵\n",
+    "X - positions: batch里有1个样本，有283个AA，每个AA的N/CA/C/O坐标为4x3的矩阵\n",
     "\n",
-    "S - batch里有两个样本，有283个AA\n",
+    "S - sequences: batch里有1个样本，有283个AA\n",
     "\n",
-    "L - 0表示非CDR，1表示CDR1，2表示CDR2，3表示CDR3\n",
+    "L - CDR masks: 0表示非CDR，1表示CDR1，2表示CDR2，3表示CDR3\n",
     "\n",
-    "mask - 0表示该AA没有坐标数据，1表示正常"
+    "mask - coordinate masks: 0表示该AA没有坐标数据，1表示正常"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "921d8650",
+   "execution_count": 17,
+   "id": "65979db7",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +391,7 @@
        "        [  17.0230, -105.4850,  -32.1180]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
