--- a/demo.ipynb
+++ b/demo.ipynb
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 70,
    "id": "1eeadbcb",
    "metadata": {},
    "outputs": [],
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 71,
    "id": "0187b3bc",
    "metadata": {
     "scrolled": true
@@ -450,13 +450,33 @@
        "(torch.Size([32, 1]), torch.Size([32, 3]))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "h.shape, x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "67412712",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "edge_index: 2 96\n",
+      "edge_fea: torch.Size([96, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"edge_index:\", len(edges), edges[0].shape[0])\n",
+    "print(\"edge_fea:\", edge_attr.shape)"
    ]
   },
   {
@@ -469,18 +489,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "ebc166d5",
+   "execution_count": 66,
+   "id": "ddc11245",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "x torch.Size([32, 3])\n",
+      "h torch.Size([32, 1])\n",
       "edge_index 2 torch.Size([96])\n",
       "edge_fea torch.Size([96, 1])\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "print(\"x\", x.shape)\n",
+    "print(\"h\", h.shape)\n",
+    "print(\"edge_index\", len(edge_index), edge_index[0].shape)\n",
+    "print(\"edge_fea\", edge_fea.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "ebc166d5",
+   "metadata": {},
+   "outputs": [
     {
      "ename": "RuntimeError",
      "evalue": "mat1 and mat2 shapes cannot be multiplied (96x34 and 35x16)",
@@ -488,7 +524,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [60], line 24\u001b[0m\n\u001b[0;32m     21\u001b[0m eghn \u001b[39m=\u001b[39m EGHN(in_node_nf\u001b[39m=\u001b[39mn_feat, in_edge_nf\u001b[39m=\u001b[39medge_feat, hidden_nf\u001b[39m=\u001b[39m\u001b[39m16\u001b[39m, n_cluster\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m)\n\u001b[0;32m     23\u001b[0m \u001b[39m# Run EGNN\u001b[39;00m\n\u001b[1;32m---> 24\u001b[0m h, x \u001b[39m=\u001b[39m eghn(x, h, edge_index, edge_fea, local_edge_index, local_edge_fea, n_node\u001b[39m=\u001b[39;49mn_nodes)\n",
+      "Cell \u001b[1;32mIn [77], line 22\u001b[0m\n\u001b[0;32m     19\u001b[0m eghn \u001b[39m=\u001b[39m EGHN(in_node_nf\u001b[39m=\u001b[39mn_feat, in_edge_nf\u001b[39m=\u001b[39medge_feat, hidden_nf\u001b[39m=\u001b[39m\u001b[39m16\u001b[39m, n_cluster\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m)\n\u001b[0;32m     21\u001b[0m \u001b[39m# Run EGNN\u001b[39;00m\n\u001b[1;32m---> 22\u001b[0m h, x \u001b[39m=\u001b[39m eghn(x, h, edge_index, edge_fea, local_edge_index, local_edge_fea, n_node\u001b[39m=\u001b[39;49mn_nodes)\n",
       "File \u001b[1;32md:\\anaconda3\\envs\\graph\\lib\\site-packages\\torch\\nn\\modules\\module.py:1130\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m   1126\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1127\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1128\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1129\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1130\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49m\u001b[39minput\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[0;32m   1131\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[0;32m   1132\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
       "File \u001b[1;32md:\\NTU\\MSAI_Project\\codes\\models\\eghn.py:163\u001b[0m, in \u001b[0;36mEGHN.forward\u001b[1;34m(self, x, h, edge_index, edge_fea, local_edge_index, local_edge_fea, n_node, v, node_mask, node_nums)\u001b[0m\n\u001b[0;32m    160\u001b[0m row, col \u001b[39m=\u001b[39m edge_index\n\u001b[0;32m    162\u001b[0m \u001b[39m''' low level force '''\u001b[39;00m\n\u001b[1;32m--> 163\u001b[0m new_x, new_v, h \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mlow_force_net(x, h, edge_index, edge_fea, v\u001b[39m=\u001b[39;49mv)  \u001b[39m# [BN, 3]\u001b[39;00m\n\u001b[0;32m    164\u001b[0m nf \u001b[39m=\u001b[39m new_x \u001b[39m-\u001b[39m x  \u001b[39m# [BN, 3]\u001b[39;00m\n\u001b[0;32m    166\u001b[0m \u001b[39m''' pooling network '''\u001b[39;00m\n",
       "File \u001b[1;32md:\\anaconda3\\envs\\graph\\lib\\site-packages\\torch\\nn\\modules\\module.py:1130\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m   1126\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1127\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1128\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1129\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1130\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49m\u001b[39minput\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[0;32m   1131\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[0;32m   1132\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
@@ -515,14 +551,12 @@
     "n_nodes = 4\n",
     "n_feat = 1\n",
     "edge_feat = 2\n",
-    "M_prime = 1\n",
+    "# M_prime = 1\n",
     "\n",
     "# Dummy variables h, x and fully connected edges\n",
     "x = torch.ones(batch_size * n_nodes, 3)\n",
     "h = torch.ones(batch_size * n_nodes, n_feat)\n",
     "edge_index, edge_fea = eg.get_edges_batch(n_nodes, batch_size)\n",
-    "print(\"edge_index\", len(edge_index), edge_index[0].shape)\n",
-    "print(\"edge_fea\", edge_fea.shape)\n",
     "# local_edge_index = torch.Tensor([0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15])\n",
     "local_edge_index = torch.zeros(8)\n",
     "local_edge_fea = torch.ones((16, 1))\n",
