--- a/demo.ipynb
+++ b/demo.ipynb
@@ -288,7 +288,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
+   "id": "055e19eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3 19 8 19 9 18 17 22 6 25 6 9 8 7 25 22 19 22 9 22 10 23 24 23 8 22 6 11 25 9 23 7 13 6 8 16 12 8 21 19 25 25 6 18 6 9 17 12 9 6 20 10 12 6 14 6 16 23 14 13 16 22 7 9 18 22 21 9 22 10 22 18 14 16 22 18 22 19 8 11 9 18 20 16 22 9 19 23 14 14 23 7 21 13 13 24 7 21 14 25 13 6 22 18 25 20 14 13 12 6 19 6 23 22 8 23 8 22 22 4 14 10 8 20 22 19 22 25 22 22 9 8 8 22 8 6 17 18 8 23 20 22 24 18 22 22 19 22 9 9 13 22 22 16 19 18 16 11 9 7 12 13 19 19 18 25 6 19 22 25 18 9 9 10 13 12 7 22 23 21 17 22 6 8 25 14 21 11 23 6 22 6 22 6 23 14 11 23 9 23 10 22 22 8 18 7 17 14 9 7 8 13 13 24 19 19 13 11 21 13 21 23 11 6 6 6 23 18 9 17 10 18 21 7 2 22 12 19 25 19 24 9 13 11 16 21 24 16 8 6 24 10 15 16 16 18 24 10 21 18 14 11 23 25 15 14 14 13 13 25 25 24 25 24 23 17 17 22 15 8 24 21 14'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \" \".join(list(map(str, list(batch[\"S\"][0].numpy()))))\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "37f8ac96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3 19 8 19 9 18 17 22 6 25 6 9 8 7 25 22 19 22 9 22 10 23 24 23 8 22 6 11 25 9 23 7 13 6 8 16 12 8 21 19 25 25 6 18 6 9 17 12 9 6 20 10 12 6 14 6 16 23 14 13 16 22 7 9 18 22 21 9 22 10 22 18 14 16 22 18 22 19 8 11 9 18 20 16 22 9 19 23 14 14 23 7 21 13 13 24 7 21 14 25 13 6 22 18 25 20 14 13 12 6 19 6 23 22 8 23 8 22 22'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s[:s.find(\" 4 \")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "58f48224",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' 4 14 10 8 20 22 19 22 25 22 22 9 8 8 22 8 6 17 18 8 23 20 22 24 18 22 22 19 22 9 9 13 22 22 16 19 18 16 11 9 7 12 13 19 19 18 25 6 19 22 25 18 9 9 10 13 12 7 22 23 21 17 22 6 8 25 14 21 11 23 6 22 6 22 6 23 14 11 23 9 23 10 22 22 8 18 7 17 14 9 7 8 13 13 24 19 19 13 11 21 13 21 23 11 6 6 6 23 18 9 17 10 18 21 7'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s[s.find(\" 4 \"):s.find(\" 2 \")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "4a6fd425",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' 2 22 12 19 25 19 24 9 13 11 16 21 24 16 8 6 24 10 15 16 16 18 24 10 21 18 14 11 23 25 15 14 14 13 13 25 25 24 25 24 23 17 17 22 15 8 24 21 14'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s[s.find(\" 2 \"):]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "id": "146f3ee2",
    "metadata": {},
    "outputs": [
@@ -298,7 +383,7 @@
        "['0000000000000000000000000011111111000000000000000002222222000000000000000000000000000000000000003333333333330000000000000000000000000000000000000044444444444400000000000000000555000000000000000000000000000000000000666666660000000000000000000000000000000000000000000000000000000000000']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "id": "083560a0",
    "metadata": {
     "scrolled": true
@@ -332,7 +417,7 @@
        "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "1973c800",
    "metadata": {},
    "outputs": [
@@ -353,7 +438,7 @@
        "(torch.Size([1, 283, 4, 3]), torch.Size([1, 283]), 1, torch.Size([1, 283]))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
